backend/tests/golden/queries/negative/08_order_by_simple/query.sdbl
ВЫБРАТЬ
    Ссылка,
    Дата
ИЗ
    Документ.АвансовыйОтчет
ГДЕ
    Дата МЕЖДУ &НачДата И &КонДата
УПОРЯДОЧИТЬ ПО Дата УБЫВ
